--- a/package.json
+++ b/package.json
@@ -22,11 +22,23 @@
   },
   "homepage": "https://github.com/kcomas/file-select#readme",
   "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "jsdoc": "^3.4.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "bootstrap-styl": "^5.0.5",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   }
 }
