--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -6,6 +6,7 @@
     },
     "opts": {
         "destination": "./doc",
-        "recurse": true
+        "recurse": true,
+        "package": "./package.json"
     }
 }
